# chainwatch

./: .gitignore  .tokencontrol.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  go.mod  go.sum  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
.tokencontrol/: state.json
cmd/chainwatch/: main.go
cmd/clawbot/: main.go
cmd/nullbot/: main.go  main_test.go  wo_format.go  wo_format_test.go
cmd/nullbot-maildrop/: main.go
cmd/orchestrator/: main.go  main_test.go
docs/: DESIGN_BASELINE.md  FAQ.md  GITHUB_PROFILE_BIO.txt  INDEX.md  OUT_OF_SCOPE.md  TODO.md  agent-classes.md  agentic-runtime-control-plane.md  benchmarks.md  boundary-configuration.md  core-idea.md  demo-scenario.md  deployment.md  design.md  getting-started.md  glossary.md  governance-doctrine.md  hardening-agents.md  irreversible-boundaries.md  monotonic-irreversibility.md  mvp-event.md  operator-workflow.md  problem.md  roadmap-clawbot.md  rootops-antipatterns.md  scope.md  security-classes.md  security-model.md  testing-guide.md  threat-model.md  v0.1.1-denylist-usage.md  why-not-ml.md  work-orders.md
docs/case-studies/: entropia-chainwatch-intraweb.md
docs/decisions/: 001-first-integration.md  002-file-classification.md  003-enforcement-mode-agnostic.md
docs/design/: README.md  agent-task-quality.md  cybercancer-prevention.md  dogfight-test-plan.md  enforcement-modes.md  fieldtest-plan.md  invariants.md  self-protection.md  three-laws.md  v0.2.0-specification.md
docs/guides/: clickhouse-rollout.md  (+2 more)
examples/: denylist_demo.py  minimal_agent_wrapper.py  realistic_agent_demo.py  soc_efficiency_demo.py
notes/: session.md  sre-finops-adoption.md
scripts/: install-nullbot.sh  install-openclaw.sh  install.sh
sdk/python/: pyproject.toml
sdk/python/chainwatch_sdk/: __init__.py  _subprocess.py  client.py  decorators.py  middleware.py  types.py
sdk/python/tests/: conftest.py  test_client.py  test_decorators.py  test_middleware.py  test_types.py
tests/: __init__.py  test_denylist.py  test_enforcement.py  test_policy.py  test_tracer.py
(+403 files in other folders)
